не много исправил модель